--- a/Cat_Photos/index.html
+++ b/Cat_Photos/index.html
@@ -1,7 +1,10 @@
 <html>
   <head>
     <title>고양이 사진첩</title>
-    <link rel="stylesheet" href="https://cdn.roto.codes/css/cat-photos.css" />
+    <link
+      rel="stylesheet"
+      href="https://cat-photos-dev-serverlessdeploymentbucket-fdpz0swy5qxq.s3.ap-northeast-2.amazonaws.com/public/css/cat-photos.css"
+    />
   </head>
   <body>
     <main class="App"></main>
